--- a/jacobhansonregalado_finalproj/index.html
+++ b/jacobhansonregalado_finalproj/index.html
@@ -15,8 +15,8 @@
 			<p class="d-flex justify-content-center">Jacob Hanson-Regalado & Sean Kwan, Fall 2021</p>
 			<h3 class="fw-light text-center text-lg-start mt-4 mb-3"><b>Project 1 Introduction</b></h3>
 			<p style="text-indent: 40px">	The insight that is crucial to this project is that an image's gradient is more important 
-				than it's intensity. We will use this property in order to seamlessly blend a source image and a background image. To achieve
-				this we will 
+				than it's intensity. We will use this property in order to seamlessly blend a source image and a background image. Helper code 
+				for the mask was used from the University of Illinois. 
 			</p>
 			<h3 class="fw-light text-center text-lg-start mt-4 mb-3"><b>Project 1 Part 1: Toy Problem</b></h3>
 			<p style="text-indent: 40px">	To first get a grasp of domain fusion, we first solved a toy example under 3 conditions:
